tests/NormalTests/paczka1/small_fuzzy/34440253.err
Error in line 3: rGQLXvIFNcN A230 14,7
Error in line 7: S898 A703 88,1
Error in line 14: OUrozxw S898 32,00
Error in line 10: 6ffZG9SqK A230 9,3
